--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,4 @@ twitter_username: your-twitter-handle
 github_username:  fuzzyprogrammer
 
 show_excerpts: false # set to false to remove excerpts on the homepage
+theme: minima
