--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: How to create your own blog using github pages
+title: How to create your own blog using Github pages
 author: Fuzzyprogrammer
 email: fuzzyprogrammerincode@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
